2020-08-20 Wiley E. Hill <wileyhill@gmail.com>

    * etc/system-gschemrc.scm: Revise menu tool tips.

    * src/x/x_menus.c: Revise x_menu_setup_ui::get_menu_item_from_scheme to
      translate nested menu items and revise menu comments for clarification.
      Fix retrieval of root_menu items by using non-tranlated strings to find
      the parent data.

2020-08-15 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Afrikaans translations.
    * po/bg.po: Update Bulgarian translations.
    * po/bs.po: Update Bosnian translations.
    * po/el.po: Update Greek translations.
    * po/fa.po: Update Persian translations.
    * po/fr.po: Update French translations.
    * po/he.po: Update Hebrew translations.
    * po/hu.po: Update Hungarian translations.
    * po/it.po: Update Italian translations.

2020-08-14 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_toolbars.c: Reseqence enumerations; move etb_edit_array to the
      end of the edit cluster. Add edit-offset button to the edit toolbar.

2020-08-13 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_toolbars.c: Rearrange buttons on tool bars; move the edit pin
      button to the bottom of the Symbol_Toolbar, move edit attributes, edit
      color, edit text edit slot, edit line, edit fill, and edit arc to the
      Modify_Toolbar and edit array to the Edit_Toolbar. Save the state if
      the modify handlebox and hide the close button in x_toolbars_finalize.
      Remove unneeded cast to GedaHandleBox in popup_activated.

2020-08-12 Wiley E. Hill <wileyhill@gmail.com>

    * include/gschem_toplevel.h: Add member modify_handlebox to toplevel.

    * include/x_menus.h: Fix lower case in OPT_PageBAR_MENU_PATH.

    * include/x_toolbars.h: Add ID_GSCHEM_Toolbar comments/documentation, add
      enumeration and strings for the modify toolbar.

    * src/x/x_menus.c: Add modbar_toggle item to the toolbar submenu.

    * src/x/x_toolbars.c: Reverse the order of etb_mirror and etb_rotate to