@@ -1,3 +1,7 @@
+2020-08-21 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/x/x_menus.c: Declare widget pointers separately.
+
 2020-08-20 Wiley E. Hill <wileyhill@gmail.com>
 
     * etc/system-gschemrc.scm: Revise menu tool tips.
